--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@prismicio/client": "^6.7.3",
+    "@prismicio/helpers": "^2.3.9",
     "@prismicio/react": "^2.5.2",
     "@types/node": "18.15.11",
     "@types/react": "18.0.31",
